[gd_scene load_steps=10 format=2]

[ext_resource path="res://font/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://font/TextFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://MenuTopBar.gd" type="Script" id=4]
[ext_resource path="res://Options.tscn" type="PackedScene" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float amount: hint_range(0.0, 5.0);

void fragment() {
	COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, amount).rgb;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/amount = 2.0

[sub_resource type="DynamicFont" id=3]
size = 21
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://font/Quicksand-Regular.ttf"

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = SubResource( 4 )

[node name="MenuTopBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blur" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelCounter" type="MarginContainer" parent="."]
anchor_right = 1.0
size_flags_vertical = 0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="LevelCounter"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 61.0

[node name="LevelText" type="Label" parent="LevelCounter/HBoxContainer"]
margin_top = 3.0
margin_right = 68.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
text = "Level"

[node name="LevelNumber" type="Label" parent="LevelCounter/HBoxContainer"]
margin_left = 72.0
margin_top = 3.0
margin_right = 998.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "1"

[node name="HPLabel" type="Label" parent="LevelCounter/HBoxContainer"]
margin_left = 1002.0
margin_top = 3.0
margin_right = 1044.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
text = "HP:"
align = 2

[node name="HP" type="Label" parent="LevelCounter/HBoxContainer"]
margin_left = 1048.0
margin_top = 3.0
margin_right = 1091.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
text = "100"
align = 2

[node name="Separator" type="Label" parent="LevelCounter/HBoxContainer"]
margin_left = 1095.0
margin_top = 11.0
margin_right = 1145.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 3 )
align = 2

[node name="PauseButton" type="Button" parent="LevelCounter/HBoxContainer"]
margin_left = 1149.0
margin_right = 1240.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
text = "Pause"
flat = true

[node name="Tween" type="Tween" parent="LevelCounter"]

[node name="PauseMenu" type="MarginContainer" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 400.0
margin_top = 150.0
margin_right = -400.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
margin_right = 480.0
margin_bottom = 470.0
color = Color( 0, 0, 0, 0.470588 )

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
margin_right = 480.0
margin_bottom = 470.0

[node name="Label" type="Label" parent="PauseMenu/VBoxContainer"]
margin_right = 480.0
margin_bottom = 149.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
text = "Paused"
align = 1
valign = 1

[node name="Resume" type="Button" parent="PauseMenu/VBoxContainer"]
margin_left = 181.0
margin_top = 153.0
margin_right = 299.0
margin_bottom = 194.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "Resume"
flat = true

[node name="MediumBuffer" type="Control" parent="PauseMenu/VBoxContainer"]
margin_top = 198.0
margin_right = 480.0
margin_bottom = 223.0
rect_min_size = Vector2( 0, 25 )

[node name="MainMenu" type="Button" parent="PauseMenu/VBoxContainer"]
margin_left = 163.0
margin_top = 227.0
margin_right = 316.0
margin_bottom = 268.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "Main Menu"
flat = true

[node name="MediumBuffer2" type="Control" parent="PauseMenu/VBoxContainer"]
margin_top = 272.0
margin_right = 480.0
margin_bottom = 297.0
rect_min_size = Vector2( 0, 25 )

[node name="Options" type="Button" parent="PauseMenu/VBoxContainer"]
margin_left = 184.0
margin_top = 301.0
margin_right = 295.0
margin_bottom = 342.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "Options"
flat = true

[node name="MediumBuffer3" type="Control" parent="PauseMenu/VBoxContainer"]
margin_top = 346.0
margin_right = 480.0
margin_bottom = 371.0
rect_min_size = Vector2( 0, 25 )

[node name="QuitButton" type="Button" parent="PauseMenu/VBoxContainer"]
margin_left = 207.0
margin_top = 375.0
margin_right = 272.0
margin_bottom = 416.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "Quit"
flat = true

[node name="BottomBuffer" type="Control" parent="PauseMenu/VBoxContainer"]
margin_top = 420.0
margin_right = 480.0
margin_bottom = 470.0
rect_min_size = Vector2( 0, 50 )

[node name="Options" parent="PauseMenu" instance=ExtResource( 5 )]
visible = false
margin_left = 90.0
margin_right = 390.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 4
[connection signal="life_changed" from="." to="." method="_on_MenuTopBar_life_changed"]
[connection signal="update_level" from="." to="." method="_on_MenuTopBar_update_level"]
[connection signal="pressed" from="LevelCounter/HBoxContainer/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
